2011-09-02  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: more uses of `$top_testsrcdir', in the `amhello' tests
	* tests/amhello-binpkg.test: Use `$top_testsrcdir' instead
	of `$testsrcdir/..'.
	* tests/amhello-cflags.test: Likewise.
	* tests/amhello-cross-compile.test: Likewise.

2011-09-02  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: avoid creating useless files in the `amhello' tests
	* tests/amhello-binpkg.test: Define `$am_create_testdir' to
	"empty" before sourcing ./defs, to avoid bringing in unused
	auxiliary files.
	* tests/amhello-cflags.test: Likewise.
	* tests/amhello-cross-compile.test: Likewise.

2011-09-02  Stefano Lattarini  <stefano.lattarini@gmail.com>

	coverage: vala support failing for VPATH from-scratch builds
	* tests/vala-vpath.test: New test, xfailing.
	* tests/Makefile.am (TESTS): Update.
	* THANKS: Update.
	From a report by Zbigniew Jędrzejewski-Szmek.
	Related to automake bug#8753.

2011-09-01  Stefano Lattarini  <stefano.lattarini@gmail.com>

	docs: report few more automake parsing limitations
	Partly motivated by automake bug#8360.
	* doc/automake.texi (General Operation): Report few more automake
	limitations w.r.t. parsing of unusual makefile constructs.  Related
	minor reorderings.
	* tests/doc-parsing-buglets-colneq-subst.test: New test.
	* tests/doc-parsing-buglets-tabs.test: Likewise.
	* tests/Makefile.am (TESTS): Update.

2011-09-01  Stefano Lattarini  <stefano.lattarini@gmail.com>

	automake: fix regression due to de-ansification support removal
	The last change `v1.11-947-g136b489' removed code that automake
	was using to decide whether binary objects were built by the
	generated Makefile.in, so that it could avoid to emit unneeded
	code when this was not the case.  Re-introduce such code in a
	less-obfuscated form, and add a test to ensure we don't regress
	again.
	* automake.in ($must_handle_compiled_objects): New global
	variable, telling whether the generated Makefile has to build