@@ -24,8 +24,6 @@
 
 . ./defs || Exit 1
 
-set -e
-
 cat > Makefile.am <<'END'
 $(FOO:=x): bar
 END
