@@ -22,8 +22,6 @@
 
 . ./defs || Exit 1
 
-set -e
-
 cat > Makefile.am <<END
 .PHONY: test
 test: all check
