@@ -20,8 +20,6 @@
 required=javac
 . ./defs || Exit 1
 
-set -e
-
 cat >> configure.in <<'END'
 AC_CONFIG_SRCDIR([org/gnu/bug/Library.java])
 AC_CONFIG_FILES([
