@@ -20,8 +20,6 @@
 required="valac"
 . ./defs || Exit 1
 
-set -e
-
 mkdir src
 
 cat >> configure.in << 'END'
