@@ -1,5 +1,14 @@
 2011-09-02  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	tests: remove redundant settings of `errexit' shell flag
+	* doc-parsing-buglets-colneq-subst.test: Do not set the
+	`errexit' shell flag, as it is already set by `tests/defs'.
+	* doc-parsing-buglets-tabs.test: Likewise.
+	* java-empty-classpath.test: Likewise.
+	* vala-vpath.test: Likewise.
+
+2011-09-02  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	tests: more uses of `$top_testsrcdir', in the `amhello' tests
 	* tests/amhello-binpkg.test: Use `$top_testsrcdir' instead
 	of `$testsrcdir/..'.
